--- a/style.css
+++ b/style.css
@@ -69,12 +69,24 @@ body {
   width: 100%;
   height: 100%;
   background: white;
-  z-index: 3;
+  z-index: 500;
   text-align: center;
   padding: 15px 25px;
   font-size: 14px;
   border-radius: 3px;
   overflow: hidden;
+}
+
+.auth0-users-widget .information .picture {
+  position: relative;
+  display: inline-block;
+  width: 84px;
+}
+
+.auth0-users-widget .information .picture .auth0-lock-social-button {
+  width: 22px;
+  height: 22px;
+  right: 0;
 }
 
 .auth0-users-widget .information .content {
@@ -148,13 +160,14 @@ body {
 }
 
 .auth0-lock-social-button {
-  width: 20px;
-  height: 20px;
+  width: 17px;
+  height: 17px;
   display: inline-block;
   position: absolute;
-  bottom: 5px;
+  bottom: 4px;
   right: 5px;
-  border-radius: 50%;
+  border-radius: 65%;
+  border: 1px solid white;
 }
 
 .auth0-lock-social-button-icon {
@@ -166,6 +179,6 @@ body {
 }
 
 /* test */
-/*.auth0-users-widget .user:nth-child(2) .information {
+.auth0-users-widget .user:nth-child(2) .information {
   display: block;
-}*/
+}
